created header and included additional data in the weather object

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chivo:wght@500&family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
     <title>WEATHER</title>
     <link rel="stylesheet" href="styles.css" />
     <meta charset="UTF-8" />
@@ -9,6 +15,12 @@
   </head>
 
   <body>
-    <h1>Hello Weather</h1>
+    <header>
+      <h1>Nice cock Погода</h1>
+      <form action="" method="get" class="cityForm">
+        <input type="text" placeholder="Город" />
+        <button>Поиск</button>
+      </form>
+    </header>
   </body>
 </html>
