Added basic stuff

--- a/index.html
+++ b/index.html
@@ -22,5 +22,38 @@
         <button>Поиск</button>
       </form>
     </header>
+    <div class="main-container">
+      <div class="temp-and-location">
+        <img
+          class="icon"
+          src="	http://cdn.weatherapi.com/weather/64x64/day/368.png"
+        />
+        <p class="country">Russia</p>
+        <p class="city">Klin</p>
+        <p class="current-temp">Current temperature: 7C</p>
+        <p class="feels-like">Feels like: 3C</p>
+      </div>
+
+      <div class="additional-data">
+        <p>Humidity: 80%</p>
+        <p>Cloud: 75%</p>
+        <p>Wind speed: 25.9km/h</p>
+        <p>Wind direction: ESE</p>
+        <p>Air quality: 1</p>
+      </div>
+      <div class="sun-moon">
+        <p>Sunrise: 08:31 AM</p>
+        <p>Sunset: 04:04 PM</p>
+        <p>Moonrise: 04:47 PM</p>
+        <p>Moonset : 11:27 AM</p>
+      </div>
+      <div class="tf-hours">
+        <div class="hour">
+          <img src="https://cdn.weatherapi.com/weather/64x64/night/260.png" />
+          <p class="temp">15C</p>
+          <p class="time">22:00</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
