finished 24 hours section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button>Поиск</button>
       </form>
     </header>
-    <div class="main-container">
+    <!-- <div class="main-container">
       <div class="temp-and-location">
         <img
           class="icon"
@@ -54,6 +54,6 @@
           <p class="time">22:00</p>
         </div>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
