changed the title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <header>
-      <h1>Nice cock Погода</h1>
+      <h1>Nice dock Погода</h1>
       <form action="" method="get" class="cityForm">
         <input type="text" placeholder="Город" />
         <button>Поиск</button>
